Fixed z-index toolbar (#606)
* Fixed z-index toolbar

* static sidebat z index

* Sidebar width now is fixed

--- a/frontend/src/pages/Player/Toolbar/Toolbar.module.scss
+++ b/frontend/src/pages/Player/Toolbar/Toolbar.module.scss
@@ -80,7 +80,7 @@
 
 .playerRail {
     position: relative;
-    z-index: 101;
+    z-index: 31;
 }
 
 .dropdownMenu {
@@ -127,7 +127,7 @@
     background-color: white;
     display: flex;
     flex-direction: row;
-    z-index: 100;
+    z-index: 30;
     border-left: 1px solid #eaeaea;
 }
 
